ansible/playbooks/storage/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: longhorn-ingress
    namespace: longhorn-system
    annotations:
        nginx.ingress.kubernetes.io/auth-type: basic
        nginx.ingress.kubernetes.io/ssl-redirect: 'false'
        nginx.ingress.kubernetes.io/auth-secret: basic-auth
        nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
spec:
    rules:
    - http:
          paths:
              - pathType: Prefix
                path: "/"
                backend:
                    service:
                        name: longhorn-frontend
                        port:
                            number: 80
